# memora

./: .gitignore  ARCHITECTURE.md  CLAUDE_COMPLETE_SPEC.md  COMPLETE_DEMO_GUIDE.md  DEMO_RESOURCES_INDEX.md  FEATURES_AND_TESTING.md  FOSS_HACK_DEMO.md  FOSS_HACK_IMPLEMENTATION_GUIDE.md  QUICK_START_EASY.md  README_VIDEO_RECORDING.md  Readme.md  VIDEO_QUICK_REFERENCE.md  WEBSITE_DOCS_LICENSING.md  complete_commits.py  dashboard.html  dashboard_local.html  git_history.py  memora_start.bat  memora_start.ps1  memora_start.sh  pyproject.toml  setup_for_video.bat  setup_for_video.sh  test.txt  test_document.txt
.arc/: PHASE_0_3_PLAN.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  performance.md
.github/workflows/: ci.yml  deploy.yml  quality.yml
docs-clean/: README.md
docs-clean/2-features/: FEATURES.md
docs-clean/3-demo-guide/: DEMO_AND_USAGE_GUIDE.md
src/memora/: __init__.py
src/memora/ai/: __init__.py  __main__.py  conversational_ai.py  file_processor.py  ollama_monitor.py  ollama_proxy.py
src/memora/core/: advanced_extraction.py  branch_manager.py  conflicts.py  console_utils.py  constants.py  engine.py  garbage_collector.py  graph.py  index.py  ingestion.py  objects.py  platform_utils.py  refs.py  security_filter.py  session.py  storage_optimization.py  store.py  time_parser.py  tokenizer.py  type_detector.py
src/memora/core/extractors/: code.py  conversation.py  document.py
src/memora/interface/: analytics.py  api.py  assembler.py  cli.py  query.py  readable_memory.py  server.py
src/memora/shared/: __init__.py  exceptions.py  interfaces.py  models.py
test_watch_dir/: test_watch.md
tests/: test_init.py  test_models.py
tests/core/: test_conflicts.py  test_engine.py  test_graph_v3.py  test_index_v3.py  test_ingestion.py  test_ingestion_v3.py  test_objects.py  test_security.py  test_session_v3.py  test_store.py  test_store_v3.py
tests/interface/: test_api.py  test_assembler.py  test_query.py
tests/shared/: test_exceptions.py  test_models.py  test_models_v3.py
