[tool.poetry]
name = "memora"
version = "0.1.0"
description = "Git-style versioned memory for any LLM"
authors = ["memora-ai"]
license = "MIT"
packages = [{include = "memora", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
spacy = "^3.7"
typer = {version = "^0.12", extras = ["all"]}
fastapi = "^0.111"
uvicorn = "^0.30"
httpx = "^0.27"
ollama = "^0.2"
pydantic = "^2.7"
rich = "^13.7"
filelock = "^3.14"
structlog = "^24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"

[tool.poetry.scripts]
memora = "memora.interface.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
