[tool.poetry]
name = "memora"
version = "0.1.0"
description = "Git-style versioned memory for any LLM"
authors = ["memora-ai"]
license = "MIT"
packages = [{include = "memora", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
spacy = "^3.7"
typer = ">=0.9.0,<0.12.0"
fastapi = ">=0.119.0"
uvicorn = "^0.30"
httpx = "^0.27"
ollama = "^0.2"
pydantic = "^2.7"
rich = "^13.7"
filelock = "^3.14"
structlog = "^24.1"
starlette = ">=0.49.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"

[tool.poetry.scripts]
memora = "memora.interface.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false

[tool.coverage.run]
source = ["src/memora"]
omit = [
    "src/memora/shared/interfaces.py",
    "src/memora/interface/server.py",
    "src/memora/interface/cli.py",
    "src/memora/interface/readable_memory.py",
    "src/memora/interface/integrations/*",
    "src/memora/core/engine.py",
    "src/memora/core/gc.py",
    "src/memora/core/index.py",
    "src/memora/core/storage_optimization.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
